--- a/style.css
+++ b/style.css
@@ -1,45 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Manrope', sans-serif;
 }
 
-*:focus{
+*:focus {
     outline: 1px solid #3d5afe;
     color: #3d5afe !important;
 }
 
-*::-webkit-scrollbar{
+*::-webkit-scrollbar {
     width: 8px;
     height: 8px;
     background: #e8eaf6;
     border-radius: 160px;
 }
 
-*::-webkit-scrollbar-thumb{
+*::-webkit-scrollbar-thumb {
     background: #c5cae9;
     border-radius: 160px;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-body{
-    background: #eff3f4;
+body {
+    background: linear-gradient(45deg, #ff9a9e 0%, #87f5ba 100%);
+    background-size: 200% 200%;
+    animation: gradient-animation 10s ease infinite;
     color: #757575;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     height: 100vh;
+    overflow: hidden;
+    position: relative;
 }
 
-.container{
-    background: #fff;
+@keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    top: 0;
+    left: 0;
+}
+
+.container {
+    background: #fbfdfd;
     width: 448px;
     padding: 16px;
     display: flex;
@@ -49,16 +74,17 @@ body{
     gap: 12px;
     border-radius: 16px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1;
 }
 
-.container header{
+.container header {
     display: flex;
     justify-content: space-between;
     width: 100%;
     gap: 12px;
 }
 
-.container header .info{
+.container header .info {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -68,7 +94,7 @@ body{
     flex-grow: 1;
 }
 
-.container header .info .count{
+.container header .info .count {
     padding: 6px;
     font-weight: 600;
     width: 100%;
@@ -81,16 +107,16 @@ body{
     border-radius: 8px;
 }
 
-.container header .info .count i{
+.container header .info .count i {
     font-size: 20px;
     font-weight: 500;
 }
 
-.container header .profile{
+.container header .profile {
     width: 400px;
 }
 
-.container header .profile img{
+.container header .profile img {
     position: relative;
     width: 100%;
     aspect-ratio: 1/1;
@@ -100,34 +126,34 @@ body{
     border: 6px solid #fff;
 }
 
-.container .about{
+.container .about {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 4px;
 }
 
-.container .about h2{
+.container .about h2 {
     display: flex;
     align-items: center;
     gap: 8px;
 }
 
-.container .about h2 i{
+.container .about h2 i {
     color: #3d5afe;
 }
 
-.container .about p{
+.container .about p {
     font-size: 16px;
     color: #424242;
 }
 
-.container .social-links{
+.container .social-links {
     display: flex;
     gap: 16px;
 }
 
-.container .social-links a{
+.container .social-links a {
     background: #fafafa;
     padding: 8px;
     display: flex;
@@ -141,28 +167,28 @@ body{
     transition: all 0.3s ease;
 }
 
-.container .social-links a i{
+.container .social-links a i {
     font-size: 26px;
     font-weight: 500;
     transition: all 0.3s ease;
 
 }
 
-.container .social-links a:hover{
+.container .social-links a:hover {
     border: 1px solid #7e57c2;
 }
 
-.container .social-links a:hover i{
+.container .social-links a:hover i {
     color: #7e57c2;
 }
 
-.container .tabs-container{
+.container .tabs-container {
     overflow-x: auto;
     margin-bottom: 4px;
     width: 100%;
 }
 
-.container .tabs-container .tabs{
+.container .tabs-container .tabs {
     position: relative;
     display: flex;
     border: 1px solid #e8eaf6;
@@ -170,11 +196,11 @@ body{
     list-style: none;
 }
 
-.container .tabs-container .tabs li{
+.container .tabs-container .tabs li {
     z-index: 2;
 }
 
-.container .tabs-container .tabs li a{
+.container .tabs-container .tabs li a {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -187,7 +213,7 @@ body{
 }
 
 .container .tabs-container .tabs li a:hover,
-.container .tabs-container .tabs li a.active{
+.container .tabs-container .tabs li a.active {
     color: #7e57c2;
 }
 
@@ -202,12 +228,12 @@ body{
     transition: all 0.5s ease;
 } */
 
-.container .tab-content{
+.container .tab-content {
     display: none;
     overflow-y: auto;
 }
 
-.container .active-tab-content{
+.container .active-tab-content {
     display: flex;
     flex-direction: column;
     gap: 4px;
@@ -217,19 +243,19 @@ body{
     margin-bottom: 16px;
 }
 
-.container .tabs-container .tabs li:nth-child(1):has(.active)~#active-tab{
+.container .tabs-container .tabs li:nth-child(1):has(.active)~#active-tab {
     transform: translateX(0);
 }
 
-.container .tabs-container .tabs li:nth-child(2):has(.active)~#active-tab{
+.container .tabs-container .tabs li:nth-child(2):has(.active)~#active-tab {
     transform: translateX(112px);
 }
 
-.container .tabs-container .tabs li:nth-child(3):has(.active)~#active-tab{
+.container .tabs-container .tabs li:nth-child(3):has(.active)~#active-tab {
     transform: translateX(224px);
 }
 
-.container .tab-content .vote{
+.container .tab-content .vote {
     display: flex;
     flex-direction: column;
     margin-top: 1px;
@@ -237,7 +263,7 @@ body{
     padding: 8px 0;
 }
 
-.container .tab-content .vote a{
+.container .tab-content .vote a {
     display: flex;
     background: #fafafa;
     gap: 8px;
@@ -253,20 +279,19 @@ body{
     color: #7e57c2;
 } */
 
-
 .highlight {
     border: 2px solid orange;
     border-radius: 5px;
 }
 
-.container .tab-content .comments{
+.container .tab-content .comments {
     margin-top: 16px;
     display: flex;
     flex-direction: column;
     gap: 16px;
 }
 
-.container .tab-content .comments .comment{
+.container .tab-content .comments .comment {
     display: flex;
     gap: 16px;
     align-items: center;
@@ -276,28 +301,28 @@ body{
     border-radius: 8px;
 }
 
-
 .container .tab-content .comments .comment {
     display: flex;
     align-items: flex-start;
 }
+
 .container .tab-content .comments .comment h4 {
-    font-size: 1.4em; /* Increase the company name size */
-    margin: 0; /* Remove default margin */
+    font-size: 1.4em;
+    margin: 0;
 }
+
 .container .tab-content .comments .comment img {
     width: 34px;
     aspect-ratio: 1/1;
     object-fit: cover;
     border-radius: 50%;
-    margin-left: 5px;/* Add some space between the image and the text */
-
+    margin-left: 5px;
 }
+
 .container .tab-content .comments .comment ul li {
     padding-top: 10px;
-    font-size: 0.9em; /* Decrease the size of the list items */
+    font-size: 0.9em;
 }
-
 
 /* .container button{
     background-color: #3d5afe;
