--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
 }
 
 *::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
+    width: 4px;
+    height: 4px;
     background: #e8eaf6;
     border-radius: 160px;
 }
@@ -183,7 +183,7 @@ body {
 }
 
 .container .tabs-container {
-    overflow-x: auto;
+    overflow-x: scroll;
     margin-bottom: 4px;
     width: 100%;
 }
@@ -194,6 +194,7 @@ body {
     border: 1px solid #e8eaf6;
     border-radius: 8px;
     list-style: none;
+    width: 521px;
 }
 
 .container .tabs-container .tabs li {
@@ -207,7 +208,7 @@ body {
     color: #000;
     min-width: 131px;
     outline: none;
-    padding: 14px 14px;
+    padding: 12px 12px;
     white-space: nowrap;
     transition: all 0.3s ease;
 }
