--- a/style.css
+++ b/style.css
@@ -283,6 +283,53 @@ body {
     border-radius: 5px;
 }
 
+.typing-container {
+    display: inline-block;
+    position: relative;
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+}
+
+.typing-text {
+    overflow: hidden;
+    border-right-between: none;
+    white-space: nowrap;
+    display: inline-block;
+    animation: typing 3.5s steps(30, end) infinite, blink 0.75s step-end infinite;
+}
+
+@keyframes typing {
+    0% {
+        width: 0;
+    }
+    50% {
+        width: 100%;
+    }
+    100% {
+        width: 100%;
+    }
+}
+
+.cursor {
+    display: inline-block;
+    width: 2px;
+    height: 1.2em;
+    background-color: currentColor;
+    margin-left: 2px;
+    animation: blink 0.75s step-end infinite;
+    vertical-align: middle;
+}
+
+@keyframes blink {
+    from, to {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+}
+
 .container .tab-content .comments {
     margin-top: 16px;
     display: flex;
