--- a/style.css
+++ b/style.css
@@ -281,53 +281,26 @@ body {
 .highlight {
     border: 2px solid orange;
     border-radius: 5px;
-}
-
-.typing-container {
     display: inline-block;
-    position: relative;
-    font-family: inherit;
-    font-size: inherit;
-    color: inherit;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .typing-text {
-    overflow: hidden;
-    border-right-between: none;
+    animation: typing 3s steps(30, end), blink-caret 0.75s step-end infinite;
     white-space: nowrap;
-    display: inline-block;
-    animation: typing 3.5s steps(30, end) infinite, blink 0.75s step-end infinite;
+    overflow: hidden;
+    border-right: 0.15em solid orange;
 }
 
 @keyframes typing {
-    0% {
-        width: 0;
-    }
-    50% {
-        width: 100%;
-    }
-    100% {
-        width: 100%;
-    }
+    from { width: 0 }
+    to { width: 100% }
 }
 
-.cursor {
-    display: inline-block;
-    width: 2px;
-    height: 1.2em;
-    background-color: currentColor;
-    margin-left: 2px;
-    animation: blink 0.75s step-end infinite;
-    vertical-align: middle;
-}
-
-@keyframes blink {
-    from, to {
-        opacity: 1;
-    }
-    50% {
-        opacity: 0;
-    }
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange }
 }
 
 .container .tab-content .comments {
