--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ a {
 }
 
 body {
-    background: linear-gradient(45deg, #ff9a9e 0%, #87f5ba 100%);
+    background: linear-gradient(45deg, #89f7fe 0%, #66a6ff 100%);
     background-size: 200% 200%;
     animation: gradient-animation 10s ease infinite;
     color: #757575;
